Fixes spacing issues with listing container

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -130,6 +130,11 @@ header .overlay {
   overflow-y: scroll;
 }
 
+.listing-container a {
+  max-width: 70%;
+  max-height: 60%;
+}
+
 .business-listing {
   display: inline-flex;
   align-content: center;
